--- a/app/src/main/res/layout/activity_map_cliente.xml
+++ b/app/src/main/res/layout/activity_map_cliente.xml
@@ -35,8 +35,8 @@
             android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             />
 
         </androidx.cardview.widget.CardView>
@@ -64,6 +64,33 @@
                     />
 
         </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btnRequestDriver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="370dp"
+                android:layout_marginRight="60dp"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:fontFamily="monospace"
+
+                android:text="SOLICITAR VIAJE"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:layout_width="79dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/navigaci"
+                android:layout_marginTop="-240dp"
+                android:layout_marginRight="15dp"
+                >
+
+            </ImageView>
         </LinearLayout>
     </LinearLayout>
 
