--- a/app/src/main/res/layout/activity_client_authenti.xml
+++ b/app/src/main/res/layout/activity_client_authenti.xml
@@ -8,9 +8,9 @@
     android:background="@color/colorPrimary"
     tools:context=".ClientAuthentiActivity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/action_bar_toolbar" />
+    <include layout="@layout/action_bar_toolbar"></include>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
