--- a/app/src/main/res/layout/activity_detail_request.xml
+++ b/app/src/main/res/layout/activity_detail_request.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailRequestActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".client.DetailRequestActivity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/action_bar_toolbar" />
+    <include layout="@layout/action_bar_toolbar"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +35,14 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 />
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/ColorDriverBtn"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"></View>
+
 
             <TextView
                 android:id="@+id/textViewDestination"
@@ -45,6 +52,12 @@
                 android:textSize="20dp"
                 android:textStyle="bold"/>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/ColorDriverBtn"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"></View>
             <TextView
                 android:id="@+id/textcarrera"
                 android:layout_width="wrap_content"
