Creacion de pantalla de calificar, creacion de la notificaciones

--- a/app/src/main/res/layout/activity_opcion_dual_driver.xml
+++ b/app/src/main/res/layout/activity_opcion_dual_driver.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
-    tools:context=".OpcionDualDriverActivity"
+    tools:context=".driver.OpcionDualDriverActivity"
     >
 <include layout="@layout/action_bar_toolbar"></include>
 
