--- a/app/src/main/res/layout/activity_map_driver.xml
+++ b/app/src/main/res/layout/activity_map_driver.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapDriverActivity">
+    tools:context=".driver.MapDriverActivity">
 
     <include layout="@layout/action_bar_toolbar"/>
 
