--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="Colorletrasly">#000000</color>
     <color name="ColorTolbar">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="overlay">#817B7A</color>
 
 </resources>
