--- a/app/src/main/res/layout/activity_map_box_place.xml
+++ b/app/src/main/res/layout/activity_map_box_place.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MapClienteActivity">
+    tools:context=".client.MapClienteActivity">
 
     <fragment
         android:id="@+id/mapa"
