--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="ColorTolbar">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="overlay">#817B7A</color>
+    <color name="colorBlueLight">#03A9F4</color>
+    <color name="colorRed">#F40303</color>
 
 </resources>
