--- a/app/src/main/res/layout/activity_enviar_imagen.xml
+++ b/app/src/main/res/layout/activity_enviar_imagen.xml
@@ -23,7 +23,18 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="40dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:text="Cliente Elegir Opcion:"
+                android:textColor="#FFFFFF"
+                android:textSize="28dp"
+                android:textStyle="bold"/>
+
 
             <ImageView
                 android:id="@+id/iv_photo"
@@ -32,7 +43,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:adjustViewBounds="true"
-                android:padding="16dp"
+                android:padding="32dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toStartOf="@+id/iv_photo1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +57,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:adjustViewBounds="true"
-                android:padding="16dp"
+                android:padding="32dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +72,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:adjustViewBounds="true"
-                android:padding="16dp"
+                android:padding="32dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toStartOf="@+id/iv_photo3"
                 app:layout_constraintStart_toStartOf="@+id/iv_photo"
@@ -75,7 +86,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:adjustViewBounds="true"
-                android:padding="16dp"
+                android:padding="32dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_photo2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +101,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:adjustViewBounds="true"
-                android:padding="8dp"
+                android:padding="7dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -105,14 +116,14 @@
         android:id="@+id/btnnextimg"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
-        android:text="Guardar Imagenes"
-        android:textColor="#FFFFFF"
-        android:textSize="22dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="40dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:text="Guardar Imagenes"
+        android:textColor="#FFFFFF"
+        android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
