--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -4,23 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
-    tools:context=".ClientAuthentiActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".client.LoginClientActivity">
 
-    <include layout="@layout/action_bar_toolbar"></include>
-
-
+    <include layout="@layout/action_bar_toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_gravity="center"
         android:orientation="vertical">
 
         <ImageView
-
             android:layout_width="250dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -32,26 +28,20 @@
             android:layout_height="50dp"
             android:layout_marginTop="40dp"
             android:gravity="center"
+            android:text="Iniciar sesión:"
             android:textColor="#FFFFFF"
-            android:text="Elegir Autenticacion:"
             android:textSize="28dp"
-            android:textStyle="bold">
-
-        </TextView>
-        <!--LineARLayout es donde empieza el contenido-->
-
-        <!--Otro Bloque estabamos que nos webeabamos_XD-->
-        <!--Ubicacion de Nombre y Apellidos Completos -->
+            android:textStyle="bold" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/btn_login_google"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
             android:layout_marginTop="40dp"
+            android:layout_marginRight="50dp"
             android:background="@drawable/rounded_button"
+            android:gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/btn_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
