--- a/app/src/main/res/layout/activity_map_client_booking.xml
+++ b/app/src/main/res/layout/activity_map_client_booking.xml
@@ -10,34 +10,20 @@
         android:id="@+id/include_toolbar"
         layout="@layout/action_bar_toolbar" />
 
-    <Button
-        android:id="@+id/btn_start_booking"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="ACEPTAR VIAJE"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/include_toolbar"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@id/include_toolbar">
 
-    <Button
-        android:id="@+id/btn_end_booking"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="FINALIZAR VIAJE"
-        android:textColor="@color/white"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_start_booking"
-        tools:visibility="visible" />
+        <TextView
+            android:id="@+id/txt_status_booking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </androidx.cardview.widget.CardView>
 
     <fragment
         android:id="@+id/map"
@@ -79,7 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="nombre del conductor"
+                android:text="nombre del usuario"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_user"
@@ -89,7 +75,7 @@
                 android:id="@+id/txt_email_user"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="email del conductor"
+                android:text="email del usuario"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/txt_name_user"
                 app:layout_constraintStart_toStartOf="@+id/txt_name_user"
